--- a/docs/setup/04.Install_Kube-master.md
+++ b/docs/setup/04.Install_Kube-master.md
@@ -1,189 +1,81 @@
 # 04.Install_kube-master
 
+> 二进制安装
+>
 > 节点：Master
 
-##### $ ansible-playbook [04.kube-master.yml](../../04.kube-master.yml)
+### OVERVIEW
 
-```shell
-roles/kube-master
-├── defaults
-│   └── main.yml
-├── tasks
-│   └── main.yml
-└── templates
-    ├── aggregator-proxy-csr.json.j2
-    ├── basic-auth.csv.j2
-    ├── kube-apiserver-v1.8.service.j2
-    ├── kube-apiserver.service.j2
-    ├── kube-controller-manager.service.j2
-    ├── kube-scheduler.service.j2
-    └── kubernetes-csr.json.j2
+##### **`$ ansible-playbook`** [04.kube-master.yml](../../04.kube-master.yml)
+
+1.Download master-binary && mv binary file 
+
+2.Create kubernetes CA
+
+3.Create Systemd unit 
+
+------
+
+### 1.Move kube-Master binary
+
+```yml
+  copy: src={{ base_dir }}/bin/{{ item }} dest={{ bin_dir }}/{{ item }} mode=0755
+  with_items:
+  - kube-apiserver
+  - kube-controller-manager
+  - kube-scheduler
 ```
 
-## 1.Intro
-
-Kubernetes master
-
-| component          | role                                                         | function                                                     |
-| ------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| apiserver          | 提供集群管理的REST API接口，包括认证授权、数据校验以及集群状态变更等。 | 提供HTTP Rest 接口的关键服务进程，kubernetes 里所有资源的增，删，查，改，唯一路口，也是集群控制的入口程序 |
-| scheduler          | 负责资源调度（Pod调度）的进程，相当于地铁的调度室            | 为应用的每个可部署组件分配一个工作节点                       |
-| controller-manager | 负责资源对象的自动化控制中心，可理解为资源对象的“大总管”     | 它通过apiserver监控整个集群的状态，并确保集群处于预期的工作状态，复制组件，持续跟踪工作节点，处理节点失败等 |
-
-请在另外窗口打开[roles/kube-master/tasks/main.yml](../../roles/kube-master/tasks/main.yml) 文件，对照看以下讲解内容。
-
-### Dashboard 基础认证开启
-
-当前如需创建基础认证，需单独修改roles/kube-master/defaults/main.yml文件，将BASIC_AUTH_ENABLE改为yes，并相应配置用户名BASIC_AUTH_USER（默认用户名为admin）及密码BASIC_AUTH_PASS。
-
-## 2.Certificate of configuration 
-
-##### ⌘+ [kubernetes-csr.json.j2](../../roles/kube-master/templates/kubernetes-csr.json.j2)
-
-<u>注意所有{{ }}变量与ansible hosts中设置的对应关系</u>
+### 2.Certificate of configuration 
 
 > kubernetes 证书既是服务器证书，同时apiserver又作为客户端证书去访问etcd 集群；作为服务器证书需要设置hosts 指定使用该证书的IP 或域名列表，需要注意的是：
 >
-> kubectl get svc 将看到集群中由api-server 创建的默认服务 kubernetes，因此也要把kubernetes 服务名和各个服务域名也添加进去
+> - 如果配置 ex-lb，需要把 EX_APISERVER_VIP 也配置进去
+> - 如果需要外部访问 apiserver，需要在 defaults/main.yml 配置 MASTER_CERT_HOSTS
+> - `kubectl get svc` 将看到集群中由api-server 创建的默认服务 `kubernetes`，因此也要把 `kubernetes` 服务名和各个服务域名也添加进去
 
-``` yaml
-{
-  "CN": "kubernetes",
-  "hosts": [
-    "127.0.0.1",
-    "{{ MASTER_IP }}",
-    "{{ inventory_hostname }}",
-    "{{ CLUSTER_KUBERNETES_SVC_IP }}",
-    "kubernetes",
-    "kubernetes.default",
-    "kubernetes.default.svc",
-    "kubernetes.default.svc.cluster",
-    "kubernetes.default.svc.cluster.local"
-  ],
-  "key": {
-    "algo": "rsa",
-    "size": 2048
-  },
-  "names": [
-    {
-      "C": "CN",
-      "ST": "Shenzhen",
-      "L": "GS",
-      "O": "k8s",
-      "OU": "System"
-    }
-  ]
-}
+创建 kubernetes 证书和私钥 aggregator
+
+[kubernetes-csr.json](../../roles/kube-master/templates/kubernetes-csr.json.j2)
+
+[aggregator-proxy-csr.json](../../roles/kube-master/templates/aggregator-proxy-csr.json.j2)
+
+```shell
+# kubernetess
+cd {{ ca_dir }} && {{ bin_dir }}/cfssl gencert \
+  -ca={{ ca_dir }}/ca.pem \
+  -ca-key={{ ca_dir }}/ca-key.pem \
+  -config={{ ca_dir }}/ca-config.json \
+  -profile=kubernetes kubernetes-csr.json | {{ bin_dir }}/cfssljson -bare kubernetes"
+  
+# aggregator
+cd {{ ca_dir }} && {{ bin_dir }}/cfssl gencert \
+  -ca={{ ca_dir }}/ca.pem \
+  -ca-key={{ ca_dir }}/ca-key.pem \
+  -config={{ ca_dir }}/ca-config.json \
+  -profile=kubernetes aggregator-proxy-csr.json | {{ bin_dir }}/cfssljson -bare aggregator-proxy
 ```
-## 3.apiserver service
 
-> 1. Kubernetes 对 API 访问需要依次经过认证、授权和准入控制(admission controll)，认证解决用户是谁的问题，授权解决用户能做什么的问题，Admission Control则是资源管理方面的作用。
-> 2. 支持同时提供https（默认监听在6443端口）和http API（默认监听在127.0.0.1的8080端口），其中http API是非安全接口，不做任何认证授权机制，kube-scheduler、kube-controller-manager 一般和 kube-apiserver 部署在同一台机器上，它们使用非安全端口和 kube-apiserver通信; 其他集群外部就使用HTTPS访问 apiserver
-> 3. 关于authorization-mode=Node,RBAC v1.7+支持Node授权，配合NodeRestriction准入控制来限制kubelet仅可访问node、endpoint、pod、service以及secret、configmap、PV和PVC等相关的资源；需要注意的是v1.7中Node 授权是默认开启的，v1.8中需要显式配置开启，否则 Node无法正常工作
-> 4. 缺省情况下 kubernetes 对象保存在 etcd /registry 路径下，可以通过 --etcd-prefix 参数进行调整
+### 3.apiserver service
 
-##### ⌘+ [kube-apiserver.service.j2](../../roles/kube-master/templates/kube-apiserver.service.j2)
+> Tip
+>
+> 1. requestheader-client-ca-file 指定的 CA 证书，必须具有 client auth and server auth；
+>
+> 2. 如果 `--requestheader-allowed-names` 为空，或者 `--proxy-client-cert-file` 证书的 CN 名称不在 allowed-names 中，则后续查看 node 或 pods 的 metrics 失败，提示：
+>
+>     Error from server (Forbidden): nodes.metrics.k8s.io is forbidden: User "aggregator" cannot list resource "nodes" in API group "metrics.k8s.io" at the cluster scope
+>
 
-注意所有{{ }}变量与ansible [hosts](../../example/hosts.m-masters.example) 中设置的对应关系 
+[kube-apiserver.service](../../roles/kube-master/templates/kube-apiserver.service.j2)
 
-| 参数                                                         | 内容                                                         |
-| ------------------------------------------------------------ | ------------------------------------------------------------ |
-| --admission-control   默认：AlwaysAdmit(ALL)                 | [REFERENCE](https://kubernetes.io/zh/docs/reference/access-authn-authz/admission-controllers/) |
-| --authorization-mode  默认： AlwaysAllow                     | [REFERENCE](https://kubernetes.io/docs/reference/access-authn-authz/authorization/#authorization-modules) |
-| --anonymous-auth     Default: true                           | [REFERENCE](https://kubernetes.io/docs/reference/access-authn-authz/authorization/#authorization-modules) |
-| --enable-swagger-ui                                          | [REFERENCE](https://kubernetes.io/docs/reference/access-authn-authz/authorization/#authorization-modules) |
-| --endpoint-reconciler-type   Default: "lease" (master-count, lease, none) |                                                              |
-| --allow-privileged    [default=false]                        | 允许容器特权                                                 |
-| --runtime-config                                             |                                                              |
+### 4. controller-manager service
 
-`cat /etc/systemd/system/kube-apiserver.service` 
+[kube-controller-manager.service.j2](../../roles/kube-master/templates/kube-controller-manager.service.j2)
 
-``` bash
-[Unit]
-Description=Kubernetes API Server
-Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-After=network.target
+### 5. scheduler service
 
-[Service]
-ExecStart={{ bin_dir }}/kube-apiserver \
-  --admission-control=NamespaceLifecycle,LimitRanger,ServiceAccount,DefaultStorageClass,ResourceQuota,NodeRestriction,MutatingAdmissionWebhook,ValidatingAdmissionWebhook \ # 准入控制
-  --bind-address={{ inventory_hostname }} \
-  --insecure-bind-address=127.0.0.1 \
-  --authorization-mode=Node,RBAC \ # 授权模式(安全接口上的授权)
-  --kubelet-https=true \
-  --kubelet-client-certificate={{ ca_dir }}/admin.pem \
-  --kubelet-client-key={{ ca_dir }}/admin-key.pem \
-  --anonymous-auth=false \  # default=true 开启安全风险大
-  --basic-auth-file={{ ca_dir }}/basic-auth.csv \
-  --service-cluster-ip-range={{ SERVICE_CIDR }} \ 
-  --service-node-port-range={{ NODE_PORT_RANGE }} \
-  --tls-cert-file={{ ca_dir }}/kubernetes.pem \
-  --tls-private-key-file={{ ca_dir }}/kubernetes-key.pem \
-  --client-ca-file={{ ca_dir }}/ca.pem \
-  --service-account-key-file={{ ca_dir }}/ca-key.pem \
-  --etcd-cafile={{ ca_dir }}/ca.pem \
-  --etcd-certfile={{ ca_dir }}/kubernetes.pem \
-  --etcd-keyfile={{ ca_dir }}/kubernetes-key.pem \
-  --etcd-servers={{ ETCD_ENDPOINTS }} \
-  --enable-swagger-ui=true \
-  --endpoint-reconciler-type=lease \
-  --allow-privileged=true \
-  --audit-log-maxage=30 \
-  --audit-log-maxbackup=3 \
-  --audit-log-maxsize=100 \  
-  --audit-log-path=/var/lib/audit.log \
-  --event-ttl=1h \
-  --requestheader-client-ca-file={{ ca_dir }}/ca.pem \
-  --requestheader-allowed-names= \
-  --requestheader-extra-headers-prefix=X-Remote-Extra- \
-  --requestheader-group-headers=X-Remote-Group \
-  --requestheader-username-headers=X-Remote-User \
-  --proxy-client-cert-file={{ ca_dir }}/aggregator-proxy.pem \
-  --proxy-client-key-file={{ ca_dir }}/aggregator-proxy-key.pem \
-  --enable-aggregator-routing=true \
-  --runtime-config=batch/v2alpha1=true \  # 时刻注意是否废弃
-  --v=2
-Restart=on-failure
-RestartSec=5
-Type=notify
-LimitNOFILE=65536
-
-[Install]
-WantedBy=multi-user.target
-```
-## 4. controller-manager service
-
-##### ⌘+ [kube-controller-manager.service.j2](../../roles/kube-master/templates/kube-controller-manager.service.j2)
-
-``` bash
-[Unit]
-Description=Kubernetes Controller Manager
-Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-
-[Service]
-ExecStart={{ bin_dir }}/kube-controller-manager \
-  --address=127.0.0.1 \ # 值必须为 127.0.0.1，因为当前 kube-apiserver 期望 scheduler 和 controller-manager 在同一台机器
-  --master=http://127.0.0.1:8080 \ #使用非安全 8080 端口与 kube-apiserver 通信
-  --allocate-node-cidrs=true \
-  --service-cluster-ip-range={{ SERVICE_CIDR }} \ #参数指定 Cluster 中 Service 的CIDR范围，必须和 kube-apiserver 中的参数一致
-  --cluster-cidr={{ CLUSTER_CIDR }} \ # 指定Cluster中Pod的CIDR范围，该网段在各 Node 间必须路由可达(calico 实现)
-  --cluster-name=kubernetes \
-  --cluster-signing-cert-file={{ ca_dir }}/ca.pem \ #指定的证书和私钥文件用来签名为 TLS BootStrap 创建的证书和私钥
-  --cluster-signing-key-file={{ ca_dir }}/ca-key.pem \
-  --service-account-private-key-file={{ ca_dir }}/ca-key.pem \
-  --root-ca-file={{ ca_dir }}/ca.pem \ # 用来对 kube-apiserver 证书进行校验，指定该参数后，才会在Pod 容器的 ServiceAccount 中放置该 CA 证书文件
-  --horizontal-pod-autoscaler-use-rest-clients=true \
-  --leader-elect=true \ # 使用多节点选主的方式选择主节点。只有主节点才会启动所有控制器，而其他从节点则仅执行选主算法
-  --v=2
-Restart=on-failure
-RestartSec=5
-
-[Install]
-WantedBy=multi-user.target
-```
-## 5. scheduler service
-
-⌘+ [kube-scheduler.service.j2](../../roles/kube-master/templates/kube-scheduler.service.j2)
+[kube-scheduler.service.j2](../../roles/kube-master/templates/kube-scheduler.service.j2)
 
 ``` bash
 [Unit]
@@ -203,7 +95,7 @@ RestartSec=5
 WantedBy=multi-user.target
 ```
 
-## 6. validation
+### 6. validation
 
 ```shell
 # 查看进程状态
