--- a/docs/setup/05.Install_Kube-node.md
+++ b/docs/setup/05.Install_Kube-node.md
@@ -1,97 +1,67 @@
 # 05.Install_Kube-node
 
-##### $ ansible-playbook [05.kube-node.yml](../../05.kube-node.yml)
+> 安装kubelet，kube-proxy，cni-plugins，haproxy [可选]
+>
+> 节点：kube-node
 
-``` bash
-roles/kube-node
-├── defaults
-│   └── main.yml
-├── tasks
-│   └── main.yml #{mkdir DIR,rsync binary,}
-└── templates
-    ├── cni-default.conf.j2
-    ├── kube-proxy.service.j2
-    ├── kubelet-csr.json.j2
-    └── kubelet.service.j2
-```
+### OVERVIEW
 
-## 1.Intro
+##### `$ ansible-playbook` [05.kube-node.yml](../../05.kube-node.yml)
 
-Kubernetes node
+1.Dir and Dowload some binary {kubelet,kube-proxy,[cni-plugins](https://github.com/containernetworking/plugins/releases/download/v0.7.5/cni-plugins-amd64-v0.7.5.tgz)} to moving
 
-| component        | role                                                         |                                         |
-| ---------------- | ------------------------------------------------------------ | --------------------------------------- |
-| kubelet          | "node agent"， 适用于PodSpec(PodSpec是描述pod的YAML或JSON对象) | 与apiserver通信，并管理它所在节点的容器 |
-| kube-proxy       | Kubernetes网络代理                                           | 负责组件之间的负载均衡网络流量          |
-| docker           | 运行容器                                                     |                                         |
-| flannel (calico) | 配置容器网络                                                 |                                         |
+2.In the node deployment haroxy [用于node节点转发多个apiserver]
 
-## 2.Certificate of configuration 
+3.CNI 配置
 
-### ansible command
+4.配置kubelet {CA，kubelet.kubeconfig，service}
 
-##### 证书签名请求 ⌘+ [kublelet-csr.json.j2](../../roles/kube-node/templates/kubelet-csr.json.j2)
+5.配置kube-proxy 
 
-##### kubenode 配置⌘+ [roles/kube-node/tasks/main.yml](../../roles/kube-node/tasks/main.yml) 
+------
 
-1. 创建kubelet 证书与私钥
-2. 创建kubelet.kubeconfig (集群参数，认证参数，上下文参数)
-3. 创建kube-proxy
-4. 配置cni 网络
+### 1.Certificate of configuration 
 
-### 2.1 kubelet service
+##### 证书签名请求 [kublet-csr.json.j2](../../roles/kube-node/templates/kubelet-csr.json.j2)
+
+##### kube-node 部署步骤 [roles/kube-node/tasks/main.yml](../../roles/kube-node/tasks/main.yml) 
+
+### 2.Deployment HA
+
+> Node 节点运行 haproxy 连接到多个 apiserver, kube-node节点不能同时为ex-lb成员
+>
+> - Master节点的 kube-controller-manager、kube-scheduler 是多实例部署，所以只要有一个实例正常，就可以保证高可用；
+> - Cluster的 Pod 使用 K8S 服务域名 kubernetes 访问 kube-apiserver， kube-dns 会自动解析出多个 kube-apiserver 节点的 IP，所以也是高可用的；
+> - 在每个节点起个haproxy进程，后端对接多个 apiserver 实例，对它们做健康检查和负载均衡；
+> - kubelet、kube-proxy、controller-manager、scheduler 通过本地的 haproxy（监听 127.0.0.1）访问 kube-apiserver，从而实现 kube-apiserver 的高可用；
+
+### 3.Create CNI config
+
+> `DaemonSet Pod`方式运行k8s网络插件，所以kubelet.server服务必须开启cni相关参数，并且提供cni网络配置文件
+
+### 4.kubelet service
 
 先创建工作目录 `/var/lib/kubelet`  [Options](https://kubernetes.io/docs/reference/command-line-tools-reference/kubelet/#options)
 
-<u>注意所有{{ }}变量与ansible hosts中设置的对应关系</u>
-
-``` shell
-[Unit]
-Description=Kubernetes Kubelet
-Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-After=docker.service
-Requires=docker.service
-
-[Service]
-WorkingDirectory=/var/lib/kubelet
-ExecStart={{ bin_dir }}/kubelet \
-  --address={{ inventory_hostname }} \
-  --allow-privileged=true \
-  --anonymous-auth=false \ # 关闭kubelet的匿名访问
-  --authentication-token-webhook \
-  --authorization-mode=Webhook \
-  --client-ca-file={{ ca_dir }}/ca.pem \
-  --cluster-dns={{ CLUSTER_DNS_SVC_IP }} \ #指定 kubedns 的 Service IP(可以先分配，后续创建 kubedns 服务时指定该 IP)，--cluster-domain 指定域名后缀，这两个参数同时指定后才会生效；
-  --cluster-domain={{ CLUSTER_DNS_DOMAIN }} \
-  --cni-bin-dir={{ bin_dir }} \
-  --cni-conf-dir=/etc/cni/net.d \
-  --fail-swap-on=false \  # K8S 1.8+需显示禁用这个，否则服务不能启动
-  --hairpin-mode hairpin-veth \
-  --hostname-override={{ inventory_hostname }} \
-  --kubeconfig=/etc/kubernetes/kubelet.kubeconfig \
-  --max-pods={{ MAX_PODS }} \
-  --network-plugin=cni \ # 为使用cni 网络，并调用calico管理网络所需的配置
-  --pod-infra-container-image={{ SANDBOX_IMAGE }} \ #指定基础容器（负责创建Pod 内部共享的网络、文件系统等）镜像，K8S每一个运行的 POD里面必然包含这个基础容器，如果它没有运行起来那么你的POD 肯定创建不了，kubelet日志里面会看到类似 FailedCreatePodSandBox 错误，可用docker images 查看节点是否已经下载到该镜像
-  --register-node=true \
-  --root-dir={{ KUBELET_ROOT_DIR }} \
-  --tls-cert-file={{ ca_dir }}/kubelet.pem \
-  --tls-private-key-file={{ ca_dir }}/kubelet-key.pem \
-  --v=2
-Restart=on-failure
-RestartSec=5
-
-[Install]
-WantedBy=multi-user.target
 ```
-### 2.2 kube-proxy kubeconfig 
+需要注意的配置
+--anonymous-auth=false	# 关闭kubelet的匿名访问
+--cluster-dns=	#指定 kubedns 的 Service IP(可以先分配，后续创建 kubedns 服务时指定该 IP)，--cluster-domain 指定域名后缀，这两个参数同时指定后才会生效；
+--fail-swap-on=false	# K8S 1.8+需显示禁用这个，否则服务不能启动
+--network-plugin=cni	# 为使用cni 网络，并调用calico管理网络所需的配置
+```
+
+### 5 kube-proxy kubeconfig 
 
 该步骤已经在 deploy节点完成，[roles/deploy/tasks/main.yml](../../roles/deploy/tasks/main.yml)
 
 + 生成的kube-proxy.kubeconfig 配置文件需要移动到/etc/kubernetes/目录，后续kube-proxy服务启动参数里面需要指定
 
-### 2.3 kube-proxy service [Options](https://kubernetes.io/docs/reference/command-line-tools-reference/kube-proxy/#options)
+### kube-proxy service [Options](https://kubernetes.io/docs/reference/command-line-tools-reference/kube-proxy/#options)
 
-> 特别注意：kube-proxy 根据 --cluster-cidr 判断集群内部和外部流量，指定 --cluster-cidr 或 --masquerade-all 选项后 kube-proxy 才会对访问 Service IP 的请求做 SNAT；但是这个特性与calico 实现 network policy冲突，所以如果要用 network policy，这两个选项都不要指定。
+> 特别注意：
+>
+> kube-proxy 根据 --cluster-cidr 判断集群内部和外部流量，指定 --cluster-cidr 或 --masquerade-all 选项后 kube-proxy 才会对访问 Service IP 的请求做 SNAT；但是这个特性与calico 实现 network policy冲突，所以如果要用 network policy，这两个选项都不要指定。
 
 ``` bash
 [Unit]
@@ -115,7 +85,7 @@ LimitNOFILE=65536
 WantedBy=multi-user.target
 ```
 
-### 3.Validation
+### Validation
 
 ``` bash
 # 查看状态
