--- a/docs/setup/06.Install_Network-Component.md
+++ b/docs/setup/06.Install_Network-Component.md
@@ -1,60 +1,63 @@
-# 06.Install_Network-Component
+## 06.Network components
 
-## 1.Kubernetes网络模型 [link](https://kubernetes.io/docs/concepts/cluster-administration/networking/#the-kubernetes-network-model)
+> 可选安装组件：flannel，calico
+>
+> 节点：kube-master，kube-node
 
-1. 每个Pod都有自己的IP地址，Pod内所有容器共享一个网络命名空间
-2. 节点上的pod可以与所有节点上的所有pod进行通信，而无需NAT
-3. 节点上的代理（例如系统守护程序，kubelet）可以与该节点上的所有pod通信
-4. 节点的主机网络中的pod可以与没有NAT的所有节点上的所有pod通信
+### OVERVIEW
 
-### 1.1 同节点Pod通信
+1.[网络模型](https://kubernetes.io/docs/concepts/cluster-administration/networking/#the-kubernetes-network-model)
 
-容器启动前会为容器创建一个虚拟Ethernet接口对(veth pair)，一个保存主机命名空间(ifconfig命令查看的vethxx条目)，一个被移入容器网络命名空间(重命名为eth0)。
+2.网络插件 [CNI](https://github.com/containernetworking/cni#community-sync-meeting)
 
-##### 过程：
+3.网络组件 { [flannel](https://github.com/coreos/flannel#flannel) | [calico](https://github.com/projectcalico/calico#calico)}
 
-`PodA(eth0) -> PodA veth pair ->  veth1111 -> Bridge(10.1.1.0/24 )  -> veth1112 ->PodB veth pair ->PodB(eth0)`
+4.Pod Network Work flow
 
-### 1.2 不同节点Pod通信
+------
 
-多种不同连接节点的网桥方式(overlay，underlay，三层路由)
+### Install Network-Component
 
-##### 满足条件：
+- [flannel](network-plugin/flannel.md)
+- [calico](network-plugin/calico.md)
 
-1. pod的ip 必须唯一
-2. 网桥必须使用非重叠地址段
+### 1.网络模型
 
-##### 过程(三层网络)：
+> 1. 每个Pod都有自己的IP地址，Pod内所有容器共享一个网络命名空间
+> 2. 节点上的pod可以与所有节点上的所有pod进行通信，而无需NAT
+> 3. 节点上的代理（例如系统守护程序，kubelet）可以与该节点上的所有pod通信
+> 4. 节点的主机网络中的pod可以与没有NAT的所有节点上的所有pod通信
+> 5. Service cluster IP 尽可在集群内部访问，外部请求需要通过 NodePort、LoadBalance 或者 Ingress 来访问
 
-`NodeA-PodA(eth0 10.1.1.1) -> PodA veth pair ->  veth1111 -> Bridge(10.1.1.0/24 )  -> NodeA-eth0(192.168.0.1) ->NodeB-eth0(192.168.0.2) -> Bridge(10.1.2.0/24) -> PodB veth pair ->PodB(eth0 10.1.2.1)`
+### 2.CNI [REFERNECE](https://github.com/containernetworking/cni)
 
-## 2. 引入容器网络接口
-
-为了方便容器连接到网络，启动项目容器网络接口([CNI](https://github.com/containernetworking/cni)) 
+> Container Network Interface (CNI) 由CoreOS发起的容器网络规范，是Kubernetes网络插件的基础。其基本思想为：Container Runtime在创建容器时，先创建好network namespace，然后调用CNI插件为这个netns配置网络，其后再启动容器内的进程。
+>
+> 容器运行时需要首先将网络命名空间分配给容器并为其分配容器ID，然后将CNI配置传递给网络驱动程序。然后，网络驱动程序将容器附加到网络，并通过JSON将分配的IP地址报告回容器运行时。
 
 [CNI Plugins](https://github.com/containernetworking/plugins#ipam-ip-address-allocation)
 
 [Container Network Interface Specification(容器接口网络规范)](https://github.com/containernetworking/cni/blob/master/SPEC.md)
 
-接口定义
+![](http://thenewstack.io/wp-content/uploads/2016/09/Chart_Container-Network-Interface-Drivers.png)
 
-```shell
-type CNI interface {
-    AddNetworkList(net *NetworkConfigList, rt *RuntimeConf) (types.Result, error)
-    DelNetworkList(net *NetworkConfigList, rt *RuntimeConf) error
+### 3.网络组件
 
-    AddNetwork(net *NetworkConfig, rt *RuntimeConf) (types.Result, error)
-    DelNetwork(net *NetworkConfig, rt *RuntimeConf) error
-}
-```
+**Pod通信**
 
-CNI 允许kubernetes 配置 CNI 插件 {Flannel,Calico...}
+> **同节点Pod通信**
+>
+> 容器启动前会为容器创建一个虚拟Ethernet接口对(veth pair)，一个保存主机命名空间(ifconfig命令查看的vethxx条目)，一个被移入容器网络命名空间(重命名为eth0)。
+>
+> **不同节点Pod通信**
+>
+> 满足条件1.Pod ip 唯一 2.网桥必须使用非重叠地址段
+>
+> 多种不同连接节点的网桥方式(overlay，underlay，三层路由)
 
-<u>Service cluster IP 在集群内部访问，外部请求需要通过NodePort、LoadBalance或者Ingress来访问</u>
+![](https://github.com/coreos/flannel/blob/master/packet-01.png?raw=true)
 
-
-
-### Kubernetes CNI 配置容器网络过程
+### 4.Pod Network Work flow
 
 > 官方：
 >
@@ -66,22 +69,10 @@ CNI 允许kubernetes 配置 CNI 插件 {Flannel,Calico...}
 - cni 插件给 pause 容器配置正确的网络
 - pod 中其他的容器都是用 pause 的网络
 
-
-
-## 3. Install Network-Component
-
-- [flannel](network-plugin/flannel.md)
-
-- [calico](network-plugin/calico.md)
-
-- [cilium](network-plugin/cilium.md)
-
-
-## 4. Reference
+### 5. Refernece
 
 [cni-ipvlan-vpc-k8s](https://github.com/lyft/cni-ipvlan-vpc-k8s)
 
 [CNI-Genie](https://github.com/Huawei-PaaS/CNI-Genie)
 
 [Cluster Networking](https://kubernetes.io/docs/concepts/cluster-administration/networking/)
-
