--- a/docs/setup/07.Install_Cluster-Addons.md
+++ b/docs/setup/07.Install_Cluster-Addons.md
@@ -1,56 +1,34 @@
-# 07.Install_Cluster-Addons
+## 07.Install_Cluster-Addons
 
-## 1.Info
+### OVEWVIEW
 
-> 修改/etc/ansible/hosts文件中配置的
+> 可选 Addons：
 >
-> `CLUSTER_DNS_SVC_IP`
+> 1.dns 自动安装 ""
 >
-> `CLUSTER_DNS_DOMAIN` 
+> 2.metric server 自动安装 ""
 >
-> 等参数生成kubedns.yaml和coredns.yaml文件
+> 3.dashboard 自动安装 ""
+>
+> 4.ingress 可选 "traefik" 和 "nginx-ingress"
+>
+> 5.metallb 
+>
+> 6.efk
+>
+> 7.prometheus
+
+### 1.DNS
 
 按需更改 [roles/cluster-addon/defaults/main.yml](../../roles/cluster-addon/defaults/main.yml) Addons 
 
-```
-roles/cluster-addon
-├── defaults
-│   └── main.yml
-├── tasks
-│   ├── ingress.yml
-│   └── main.yml
-└── templates
-    ├── coredns.yaml.j2
-    ├── kubedns.yaml.j2
-    └── metallb
-        ├── bgp.yaml.j2
-        ├── layer2.yaml.j2
-        └── metallb.yaml.j2
-```
+CoreDNS [CoreDNS.yaml](../../roles/cluster-addon/templates/coredns.yaml.j2)
 
-## 1.1 默认开启的Addons
+kubeDNS [kubeDNS.yaml](../../roles/cluster-addon/templates/kubedns.yaml.j2)
 
-### 1.1.1 DNS {coredns}
+### 2.Metrics-Server
 
-1. 通过ansible 复制 templates/coredns.yaml.j2  需要做变量替换
-
-    `kubernetes {{ CLUSTER_DNS_DOMAIN }}` `clusterIP: {{ CLUSTER_DNS_SVC_IP }}`
-
-2. 无离线镜像直接从/opt/kube/kube-system/coredns/coredns.yaml 文件中定义的源拉取
-
-    ```yaml
-    image: coredns/coredns:1.2.6
-    ```
-
-3. 通过替换后的coredns.yaml 生成
-
-    `$ kubectl apply -f /opt/kube/kube-system/{{ dns_backend }}`
-
-### 1.1.2 Metrics-Server
-
-1. 判断变量{{ metricsserver_offline }}是否有离线镜像导入docker images 
-
-2. 无离线镜像由配置清单 [metrics-server-deployment.yaml](../../manifests/metrics-server/metrics-server-deployment.yaml) 中定义
+2. 镜像由配置清单 [metrics-server-deployment.yaml](../../manifests/metrics-server/metrics-server-deployment.yaml) 中定义
 
     ```yaml
     #image: k8s.gcr.io/metrics-server-amd64:v0.3.0
@@ -59,11 +37,9 @@ roles/cluster-addon
 
 3. 通过 kuberctl apply -f /etc/ansible/manifests/metrics-server 直接部署
 
-### 1.1.3 Dashboard
+### 3.Dashboard
 
-1. 判断变量{{ dashboard_offline }}是否有离线镜像后，导入docker images 
-
-2. 无离线镜像由配置清单 [kubernetes-dashboard.yaml](../../manifests/dashboard/kubernetes-dashboard.yaml) 中定义
+2. 镜像由配置清单 [kubernetes-dashboard.yaml](../../manifests/dashboard/kubernetes-dashboard.yaml) 中定义
 
     ```yaml
     #image: k8s.gcr.io/kubernetes-dashboard-amd64:v1.8.3
@@ -71,8 +47,6 @@ roles/cluster-addon
     ```
 
 3. 通过 kuberctl apply -f /etc/ansible/manifests/dashboard 直接部署
-
-#### 
 
 
 
