--- a/docs/setup/00.K8S_Deployment.md
+++ b/docs/setup/00.K8S_Deployment.md
@@ -3,6 +3,8 @@
 > 通过ansible编排工具部署k8s集群
 >
 > 官方推荐的生产解决方案List [Production environment](https://kubernetes.io/docs/setup/#production-environment)
+>
+> 升级内核大于 4.4.x
 
 ### Components Version
 
