update binary version

--- a/docs/setup/00.K8S_Deployment.md
+++ b/docs/setup/00.K8S_Deployment.md
@@ -71,12 +71,11 @@ $ chmod +x download.sh
 $ ./download.sh 
 # You must download the script first 
 	kubernetes-server-linux-amd64.tar.gz
-	etcd-v3.2.24-linux-amd64.tar.gz
-	docker-18.06.3-ce.tgz
-	cni-v0.6.0.tgz
-	1.23.0/docker-compose-Linux-x86_64
+	etcd-v3.3.10-linux-amd64.tar.gz
+	docker-18.09.6.tgz
+	cni-v0.7.5.tgz
+	1.23.2/docker-compose-Linux-x86_64
 	Cfssl
-	harbor-offline
 ```
 
 ### 3.Configure the cluster
